fix: More CSS: Fonts and Spacing

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/kiona-2');
-@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,300&display=swap');
 
 :root {
     --primary-color: #242b33;
@@ -7,8 +7,8 @@
     --accent1-color: #2d5c7f;
     --accent2-color: #c1cad6;
 
-    --heading-font: "Kiona";
-    --paragraph-font: "Rubik", Lato, Helvetica, sans-serif;
+    --heading-font: "Kiona", Lato, Helvetica, sans-serif                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     ;
+    --paragraph-font: "Kanit", Lato, Helvetica, sans-serif;
 
     /* these colors below should be chosen from among your palette colors above */
     --headline-color-on-white: #212349;
@@ -21,9 +21,10 @@
     /* paragraph text on a colored background */
     --paragraph-background-color: #242b33;
     --nav-link-color: white;
+    --background-color: #1e1e1f;
     --nav-background-color: #242b33;
     --nav-hover-link-color: #c1cad6;
-    --nav-hover-background-color: #242b33;
+    --nav-hover-background-color: #2d5c7f;
 }
 
 #content {
@@ -45,8 +46,14 @@
     width: 100%;
 }
 
+#logo_link {
+    padding-top: 5px;
+}
+
 body {
-    background-color: var(--primary-color)
+    background-color: var(--background-color);
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -58,6 +65,7 @@ nav a {
     text-decoration: none;
     color: var(--nav-link-color);
     background-color: var(--nav-background-color);
+    padding: 35px;
 }
 
 nav a:hover {
@@ -71,11 +79,19 @@ main section {
 
 h4 {
     color: var(--headline-color-on-color);
+    margin: 0;
+}
+
+h2 {
+    color: var(--headline-color-on-color);
+    margin: 0;
 }
 
 footer {
     color: var(--accent1-color);
-    background-color: var(--paragraph-background-color);
+    background-color: var(--secondary-color);
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 footer a {
@@ -95,8 +111,19 @@ footer p a:hover {
     text-decoration: none;
 }
 
+footer .social img {
+    padding-top: 15px;
+}
+
+main section img {
+    box-sizing: border-box;
+}
+
 .home-title {
     color: var(--headline-color-on-color);
+    font-family: var(--heading-font);
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 .button-box {
@@ -107,17 +134,27 @@ footer p a:hover {
 .join {
     text-decoration: none;
     color: var(--nav-link-color);
-    background-color: var(--nav-hover-background-color);
+    background-color: var(--nav-background-color);
+    font-family: var(--paragraph-font);
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover,
 .join:hover {
     color: var(--nav-hover-link-color);
-    background-color: var(--nav-background-color);
+    background-color: var(--accent1-color);
 }
 
 .msg {
     color: var(--paragraph-color-on-color);
+    background-color: var(--secondary-color);
+    font-family: var(--paragraph-font);
+    font-size: 0.8em;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 .msg h2 {
@@ -126,11 +163,23 @@ footer p a:hover {
 
 .msg p {
     color: var(--paragraph-color-on-color);
+    padding-bottom: 15px;
 }
 
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 .logo {
     width: 80px;
+}
+
+.meteors-card,
+.asteroid-belt-card,
+.nebulas-card {
+    margin: 200px;
+}
+
+.card-img {
+    border: 10px solid black;
 }
